// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiStepIndicator renders correctly with className 1`] = `
<ol
  className="wrapper test"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with dividerComponentClassName 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider test horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider test horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with empty props 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
/>
`;

exports[`MultiStepIndicator renders correctly with fulfilledStepIcon 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M5.7205 3.22905C5.8506 3.08332 6.03668 3 6.23203 3H14.2113C14.4224 3 14.6217 3.09723 14.7516 3.26359L17.8547 7.23601C18.053 7.48988 18.0478 7.84757 17.8423 8.09563L10.528 16.9232C10.3977 17.0804 10.2042 17.1714 10 17.1714C9.79582 17.1714 9.60226 17.0804 9.47198 16.9232L2.1577 8.09563C1.94134 7.8345 1.94835 7.45444 2.17418 7.20147L5.7205 3.22905ZM5.95682 5.02365L6.60922 6.97241H4.21709L5.95682 5.02365ZM4.14439 8.34384H7.03991L8.48766 13.5857L4.14439 8.34384ZM11.5123 13.5857L15.8556 8.34384H12.9601L11.5123 13.5857ZM11.5373 8.34384L10 13.91L8.46268 8.34384H11.5373ZM13.4951 6.97241H15.9085L14.3727 5.00631L13.4951 6.97241ZM13.1542 4.37143H7.18472L8.05546 6.97241H11.9932L13.1542 4.37143Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with isFulfilledStepDisplayNumber 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          1
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with mode compact 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeCompactNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Title
        </span>
      </div>
    </div>
  </li>
  <div
    className="divider divider compact horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeCompactNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Active
        </span>
      </div>
    </div>
  </li>
  <div
    className="divider divider compact horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeCompactNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Pending
        </span>
      </div>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with mode compact textPlacement vertical 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with stepComponentClassName 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with steps 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with textPlacement vertical 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusFulfilledNumberContainerText sizeRegularNumberContainerText"
        >
          <svg
            aria-hidden={true}
            className="icon numberContainerTextCheckIcon noFocusStyle"
            data-testid="icon"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusActiveNumberContainerText sizeRegularNumberContainerText"
        >
          2
        </span>
      </div>
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      >
        <span
          className="numberContainerText typePrimaryNumberContainerText statusPendingNumberContainerText sizeRegularNumberContainerText"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;
